# largeint

./: .gitignore  CMakeLists.txt  README  add.cpp  makefile
include/: nat.hpp  natural.hpp
py/: add.py
src/: nat.cpp  natural.cpp
tests/: makefile  natural-times-digit.cpp  natural-times-natural.cpp  tdigit-mul-rand.cpp  tdigit-mul.cpp  tduplicate.cpp  tduplicate1.cpp  test01-read-input.cpp  test02-natural-plus-digit.cpp  test03-natural-minus-natural.cpp  test04-mul-digit-pair.cpp  test05-duplicate.cpp  test08-natural-div-digit.cpp  test09-natural-div-natural.cpp  tests.hpp  tincr.cpp  tincr0.cpp  tlastbit.cpp  tmmm-rand.cpp  tmmm-size.cpp  tmp  tmul-digit-pair-times.cpp  tmul-digit-pair.cpp  tmul-digits-high.cpp  tmul-digits-low.cpp  tmul-digits.cpp  tmul.cpp  tmulmul-rand.cpp  tread.cpp  tsum.cpp  tsum0.cpp
tests-random/: random-mul-digit-pair-times.cpp  random-natural-div-natural.cpp  random-natural-minus-natural.cpp  random-natural-plus-natural.cpp  random-natural-times-digit.cpp  random-natural-times-natural.cpp  tmmm-rand.cpp  tmul-rand.cpp  tsum-rand.cpp  tsum.cpp
tests/include/: tests.hpp
tests/tmp/: tincr.cpp  tincr0.cpp  tlastbit.cpp
time/: add-times.cpp  add.sh  duplicate-times.cpp  makefile  mul-mpz-lint.cpp  out.py  sum-mpz-lint.cpp
time/py/: add-times.py  duplicate-times.py  outlnum  outpy
